[gd_scene load_steps=3 format=3 uid="uid://bd3fjuridfsnl"]

[ext_resource type="Script" path="res://addons/ConsoleGD/scripts/console_scene.gd" id="1_ayjop"]
[ext_resource type="Theme" uid="uid://dsetugfuuo23h" path="res://addons/ConsoleGD/console.theme" id="1_j2tue"]

[node name="_Console_scene" type="Control"]
process_mode = 3
y_sort_enabled = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 1
mouse_filter = 2
mouse_force_pass_scroll_events = false
theme = ExtResource("1_j2tue")
script = ExtResource("1_ayjop")

[node name="WidgetsContainer" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Window" type="Window" parent="."]
unique_name_in_owner = true
title = "WINDOW_CONSOLE_TITLE"
position = Vector2i(0, 24)
size = Vector2i(800, 400)
extend_to_title = true
min_size = Vector2i(296, 200)
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="Panel" type="Panel" parent="Window"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Window/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextBox" type="RichTextLabel" parent="Window/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 2
mouse_default_cursor_shape = 1
bbcode_enabled = true
context_menu_enabled = true
selection_enabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="Window/Panel/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="LineCommand" type="LineEdit" parent="Window/Panel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ButtonSend" type="Button" parent="Window/Panel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
text = "WINDOW_CONSOLE_BUTTON_SEND"

[node name="PopupInputHelp" type="PopupMenu" parent="Window"]
unique_name_in_owner = true
handle_input_locally = false
position = Vector2i(2, 219)
size = Vector2i(191, 8)
always_on_top = true
max_size = Vector2i(16384, 141)
theme_type_variation = &"input_help"
allow_search = false

[node name="PanelBackground" type="Panel" parent="."]
unique_name_in_owner = true
process_mode = 3
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_force_pass_scroll_events = false
theme_type_variation = &"PanelBackground"
